# traduora-update

./: Cargo.toml  LICENSE  README.md  traduora-update.json  traduora-update.schema.json
.github/workflows/: rust.yml
src/: config.rs  layout.rs  main.rs  modal_host.rs  updater.rs
src/load/: data.rs  local.rs  mod.rs  remote.rs
src/loader/: data.rs  local.rs  mod.rs  remote.rs
testdata/: en-utf16be.json  en-utf16le.json  en-utf8-bom.json  en-utf8.json
