[package]
name = "traduora-update"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"
description = "A GUI application to automatically update Traduora terms from a local translation file"
repository = "https://www.github.com/ede1998/traduora-update"
homepage = "https://www.github.com/ede1998/traduora-update"
keywords = ["traduora", "localization"]
license = "Apache-2.0"
categories = ["localization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
druid = { version = "0.7.0", features = ["im"] }
git2 = "0.13.23"
itertools = "0.10.1"
log = "0.4.14"
once_cell = "1.8.0"
serde = "1.0.130"
serde_json = "1.0.68"
traduora = "0.1.0"

[features]
