[package]
name = "traduora-update"
version = "0.5.0"
edition = "2021"
rust-version = "1.56"
description = "A GUI application to automatically update Traduora terms from a local translation file"
repository = "https://www.github.com/ede1998/traduora-update"
homepage = "https://www.github.com/ede1998/traduora-update"
keywords = ["traduora", "localization"]
license = "Apache-2.0"
categories = ["localization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
druid = { version = "0.7.0", features = ["im"] }
encoding_rs = "0.8.30"
env_logger = "0.9.0"
git2 = "0.14.2"
itertools = "0.10.3"
json_comments = "0.2.0"
log = "0.4.14"
once_cell = "1.10.0"
schemars = "0.8.8"
serde = "1.0.136"
serde_json = "1.0.79"
traduora = "0.4.0"

[features]
